# hydra-logger

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEVELOPMENT_PLAN.md  LICENSE  MIGRATION_SUMMARY.md  PERFORMANCE_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  STRATEGIC_PLAN.md  TASKS_WEEK1.md  USAGE_GUIDE.md  _cleaner.py  activate.sh  async_hydra_refactor.md  check_coverage.py  codecov.yml  environment.yml  example_run_report.json  last_test_run.txt  mapping_old_knowledge.md  performance_benchmark.py  project_tree.md  pyproject.toml  pyrightconfig.json  pytest.ini  refactor_the_bs.md  requirements-dev.txt  requirements.txt  setup.py  setup_env.sh  structure.md
.backup_copies/: BACKUP_INFO.txt
.github/: pull_request_template.md
benchmark/: README.md  dev_logging.py  drift.py  guards.py  io_metrics.py  metrics.py  performance_benchmark.py  profiles.py  reporting.py  runners.py  schema_validation.py  workloads.py
benchmark_results/: benchmark_2025-11-23_19-13-43.json  benchmark_2025-11-23_19-17-59.json  benchmark_2025-11-23_19-22-40.json  benchmark_2025-11-23_20-05-42.json  benchmark_2025-11-23_22-07-27.json  benchmark_latest.json
benchmarks/: QUICK_REFERENCE.md  README.md  benchmark.py  comprehensive_results.csv  comprehensive_results.json  hydra_async_bench.py  hydra_mixed_bench.py  hydra_sync_bench.py  performance_test.py  results.csv  results.json  sync_hydra_test.py
demos/: multi_file_workflow_demo.py  multi_module_demo.py
docs/: AGENT_AUTOMATION.md  ARCHITECTURE.md  EDA_MICROSERVICES_GUIDE.md  (+25 more)
(+899 files in other folders)
